# hf_download_scheduler

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGLOG.md  Makefile  README.md  pyproject.toml  pytest.ini  query_logs.py
config/: config.yaml  models.json
scripts/migrations/: add_time_window_fields.py  add_weekend_timezone_fields.py
specs/001-hf-cli-hf/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hf-cli-hf/contracts/: cli-contract.md  database-contract.md
specs/002-hf-22-00/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-hf-22-00/contracts/: time_window_api.yaml
src/: app.py
src/hf_downloader/: __init__.py
src/hf_downloader/cli/: __init__.py  __main__.py  main.py
src/hf_downloader/core/: __init__.py  config.py
src/hf_downloader/daemon/: main.py
src/hf_downloader/models/: __init__.py  database.py
src/hf_downloader/services/: cli_integration.py  configuration.py  downloader.py  error_handling.py  integration_service.py  model_probe.py  model_sync.py  process_manager.py  scheduler.py  time_window.py
src/hf_downloader/utils/: __init__.py  config.py  custom_logging.py  dask.py  utils.py
tests/contract/: test_cli_models.py  test_cli_start.py  test_cli_status.py  test_cli_stop.py  test_database_models.py  test_services_downloader.py  test_services_process_manager.py  test_services_scheduler.py
tests/integration/: test_configuration_integration.py
